--- a/codecock-backend/src/main/resources/application.properties
+++ b/codecock-backend/src/main/resources/application.properties
@@ -1,1 +1,25 @@
-spring.application.name=codecock-backend
+spring.datasource.url=jdbc:mysql://localhost:3306/codecock
+spring.datasource.username=root
+spring.datasource.password=4481
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+jwt.secret=k98elfo01eb/MUv1Qg0DbyoITAAtatWDacJ5Qis9sJY=
+jwt.expiration=3600000
+
+
+
+logging.level.org.springframework.security=DEBUG
+
+# ?? ?? ??
+server.port=8080
+
+# ?? ???? ?? ?? (?? ?? ??)
+base.url=
+
+# ?? ?? ?? ?? (10MB ??)
+spring.servlet.multipart.max-file-size=100MB
+# ?? ?? ?? ?? (10MB ??)
+spring.servlet.multipart.max-request-size=100MB
