--- a/codecock-frontend/package.json
+++ b/codecock-frontend/package.json
@@ -14,7 +14,8 @@
     "firebase": "^11.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
