--- a/codecock-backend/src/main/resources/application.properties
+++ b/codecock-backend/src/main/resources/application.properties
@@ -1,26 +1,1 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/codecock?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-jwt.secret=k98elfo01eb/MUv1Qg0DbyoITAAtatWDacJ5Qis9sJY=
-jwt.expiration=3600000
-
-
-
-logging.level.org.springframework.security=DEBUG
-
-# ?? ?? ??
-server.port=8080
-
-# ?? ???? ?? ?? (?? ?? ??)
-base.url=
-
-# ?? ?? ?? ?? (10MB ??)
-spring.servlet.multipart.max-file-size=100MB
-# ?? ?? ?? ?? (10MB ??)
-spring.servlet.multipart.max-request-size=100MB
+spring.application.name=codecock-backend
