--- a/codecock-frontend/.gitignore
+++ b/codecock-frontend/.gitignore
@@ -1,69 +1,24 @@
-HELP.md
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-# Node.js
-node_modules/
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# 빌드 결과물
-dist/
-*.map
+node_modules
+dist
+dist-ssr
+*.local
 
-# 환경 설정 파일
-.env
-.env.local
-.env.*.local
-
-# OS 관련
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-desktop.ini
-
-# 편집기 설정
-.vscode/
-.idea/
 *.suo
-*.ntvs
+*.ntvs*
 *.njsproj
 *.sln
-*.swp
-
-# 테스트
-coverage/
-
-
-/src/main/resources/application.properties
+*.sw?
