--- a/codecock-frontend/package.json
+++ b/codecock-frontend/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "codecock-frontend": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
